# obfuscator-llvm

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
obfuscator-llvm/: BogusControlFlow.cpp  BogusControlFlow.h  CMakeLists.txt  CryptoUtils.cpp  CryptoUtils.h  Flattening.cpp  Flattening.h  Obfuscation.cpp  SplitBasicBlocks.cpp  SplitBasicBlocks.h  Substitution.cpp  Substitution.h  Utils.cpp  Utils.h
test/: test.c
